# ROD

./: .gitignore  README.md
docs/: 2026-eurobot-rules.md  general-eurobot-rules.md  how-to-calibrate-the camera.md  how-to-connect.md  how-to-edit-wifi.md  how-to-exchange-files-between-computer-and-rpi.md  how-to-test-the-camera.md  pose-estimation.md
rod_c/: CMakeLists.txt  README.md  build.sh  diagnose.sh  rod_communication.c  rod_detection.c  stop.sh  test_debug_images.sh
rod_c/docs/: architecture.md  how-to-build.md  how-to-run.md
rod_c/rod_camera/: CMakeLists.txt  camera.c  camera.h  camera_interface.c  camera_interface.h  libcamera_wrapper.cpp  libcamera_wrapper.h
rod_c/rod_camera/backends/emulated/: emulated_camera.c
rod_c/rod_camera/backends/imx477/: camera.c  camera.h
rod_c/rod_camera/config/imx477/: imx477.txt
rod_c/rod_camera/wrappers/: libcamera_wrapper.cpp
rod_c/rod_config/: rod_config.c  rod_config.h
rod_c/rod_cv/: opencv_wrapper.cpp  opencv_wrapper.h  rod_cv.c  rod_cv.h
rod_c/rod_visualization/: rod_visualization.c  rod_visualization.h
rod_c/systemd/: disable.sh  enable.sh  install.sh  rod-communication.service  rod-detection.service  rod.target  uninstall.sh
rod_c/tests/: CMakeLists.txt  README.md  test_aruco_detection.c  test_aruco_pose_estimation.c  test_camera_interface.c  test_camera_parameters.c  test_detection_dataset.c  test_emulated_camera.c  test_emulated_camera_impl.c  test_geometric_accuracy.c  test_rod_camera.c
rod_python/: requirements.txt
rod_python/apps/: calibration_fisheye.py  detection_fishey.py  detection_smartphone.py
rod_python/docs/: architecture.md  how-to-run.md
rod_python/lab/: 2 detect aruco tags - combinaisons benchmark.py  aruco_initial_positions.py
rod_python/setup/: setup_venv.sh
rod_python/src/camera/: emulated_camera.py  picamera.py  webcam.py
tools/: README.md  calibrate_camera.py  capture.py  capture.sh  capture_for_calibration.py  check_camera.sh  check_memory.sh  check_wifi.sh  create_timelapse_video.py  stream.py  sync_debug.sh  sync_pictures.sh
